[workspace]
[package]
version = "0.1.0"
name = "sp1-script"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
sp1-core = { git = "https://github.com/succinctlabs/sp1.git", rev = "69a3681986fed1f443cbd3f1b19f9e2ced29b704" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "69a3681986fed1f443cbd3f1b19f9e2ced29b704" }
hex = "0.4.3"
bincode = "1.3.3"
