[workspace]
[package]
version = "0.1.0"
name = "sp1-script"
edition = "2021"

[dependencies]
utils = { path = "../utils" }
sp1-core = { git = "https://github.com/succinctlabs/sp1.git", rev = "7ce13033a0557f964cd349393d367aa1bcf8fbe7" }
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git", rev = "7ce13033a0557f964cd349393d367aa1bcf8fbe7" }
hex = "0.4.3"
bincode = "1.3.3"
